# boost-serialization

boost-udp/receiver/: CMakeLists.txt  receiver.cpp
boost-udp/sender/: CMakeLists.txt  sender.cpp
